--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,4 @@ __pycache__/
 data_dir/Output.txt
 data_dir/object_uid.json
 
-Это ветка * feature/write-json-file
+#Это ветка * feature/write-json-file
